--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,16 @@
 .banner-properties{
     background-color: #264653;
 }
+
+
+.banner-gradient{
+    width: 100%;
+    height: auto;
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/bike-1.png');
+    background-repeat: no-repeat;  
+    background-size: cover;
+}
+
 .bikerz-zone-light-red{
     background-color: #ff00004d;
 }
